# llm-prompts

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml
cline/: vars.json
cline/rules/: 000-context-window-canary.md  001-banned-phrasing.md  002-skill-usage.md  coding.md  consistency.md  context-window.md  git.md  mcp-tool-usage-cline.md  mcp-tool-usage.md  memory-cline.md  memory.md  new_task.md  self-improving-cline.md  stop-on-fail.md  todos.md
cline/skills/git-usage/: SKILL.md
cline/workflows/: confidence.md  pre-start.md  simplify.md  todos.md  word-god.md
copilot/: vars.json
kiro/: vars.json
kiro/rules/: memory-kiro.md  subagents.md
scripts/: install.py  install.sh  render_template.py  setup_overlay.py
shared/rules/: 000-rule-sources.md  002-skill-usage.md  coding.md  context-window.md  git.md  mcp-usage.md  memory.md  new_task.md  stop-on-fail.md  todos.md
shared/skills/pre-implementation/: SKILL.md
shared/skills/refine-plan/: SKILL.md
shared/skills/session-end/: SKILL.md
shared/workflows/: confidence.md
skills/pre-implementation/: SKILL.md
skills/refine-plan/: SKILL.md
src/llm_prompts/: cli.py  hooks.py  install.py  manifest.py  render_template.py  setup.py
src/llm_prompts/prompts/claude-code/: vars.json
src/llm_prompts/prompts/claude-code/agents/: architect.md
src/llm_prompts/prompts/claude-code/rules/: agent-teams.md  background-agents.md  delegation.md  planning.md  shell.md
src/llm_prompts/prompts/cline/: vars.json
src/llm_prompts/prompts/cline/rules/: context-window-cline.md  mcp-tool-usage-cline.md
src/llm_prompts/prompts/cline/workflows/: new-task-automation.md
src/llm_prompts/prompts/codex/: vars.json
src/llm_prompts/prompts/kiro/: vars.json
src/llm_prompts/prompts/kiro/rules/: agent-setup-kiro.md  context-window-kiro.md
src/llm_prompts/prompts/shared/rules/: 000-rule-sources.md  001-banned-phrasing.md  coding.md  (+7 more)
tests/: test_cli.py  test_cli_uninstall.py  test_hooks.py  test_install.py  test_install_agents.py  test_install_codex.py  test_manifest.py  test_retrospective_extract.py  test_todos_script.py  test_uninstall.py
(+19 files in other folders)
